master:

- Support for the automated generation and installation of a CMake package configuration file that
  greatly lowers the barrier for downstream C++ applications to use functionality provied by the CDPL C++ API

v1.2.3:

 - New control-parameters Chem::MOL2_READ_PARTIAL_AS_FORMAL_CHARGES and Chem::MOL2_OUTPUT_FORMAL_CHARGES plus
   associated functions that allow to control whether formal instead of partial charges shall be read from/written to
   MOL2 files
 - Fix for a Base::ItemNotFound exception that gets thrown during the merging of temporary PSD files which occur
   when running the program 'PSDCreate' in multi-threaded mode
 - New class template Descr::BulkSimilarityCalculator for the calculation of multiple query <-> target descriptor
   similarities/distances in a single run 
 - Similarity and distance functions in namespace Descr are now also available in the form of functor classes
 - New similarity and distance functions in namespace Descr applicable to generic mathematical vectors
 - New feature of program 'ChOX' that allows to display structure/reaction data associated
   with the currently shown molecules/reactions

v1.2.2:

 - The command line tool 'PSDCreate' now offers the possibility to process only a subset of the input molecules that
   can be specified by means of a start (option -s) and an end molecule index (option -e)
 - Fixed an issue leading to a segmentation fault in the course of parsing (invalid) SMILES/SMARTS strings that occurs
   if a ring closure at a chiral atom cannot be completed due to either missing or erroneously placed closure numbers
 - Added new setter/getter method pair outputZeroBasedIndices(bool)/outputZeroBasedIndices() to class Pharm::FileScreeningHitCollector
   that allows to control whether any indices (mol. index, conf. index, etc.) stored to mol. SD entries shall be zero- or one-based
 - The command line tool 'PSDScreen' now offers a new option -r that allows to specify a report file in which