@@ -25,6 +25,11 @@
 class IStream(Boost.Python.instance):
 
     ##
+    # \brief The standard input stream of the current process.
+    # 
+    STD_IN = \brief The standard input stream of the current process.
+
+    ##
     # \brief Returns the numeric identifier (ID) of the wrapped C++ class instance.
     # 
     # Different Python \c %IStream instances may reference the same underlying C++ class instance. The commonly used Python expression
