@@ -1,7 +1,11 @@
 master:
 
-- Support for the automated generation and installation of a CMake package configuration file that
-  greatly lowers the barrier for downstream C++ applications to use functionality provied by the CDPL C++ API
+ - C++ standard input, output and error streams (std::cin, std::cout and std::cerr) are now exposed
+   as class variables Base.IStream.STD_IN, Base.OStream.STD_OUT and Base.OStream.STD_ERR, respectively.
+   For example, Base.IStream.STD_IN might be passed as argument to the constructor of a Chem.MoleculeReader
+   instance which will then read molecule data from the standard input of the current process
+ - Support for the automated generation and installation of a CMake package configuration file that
+   significantly lowers the barrier for downstream C++ applications to use functionality provied by the CDPL C++ API
 
 v1.2.3:
 
